--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ ul li.checked::before {
   width: 7px;
 }
 
-.kapat {
+.close {
   font-weight: bolder;
   position: absolute;
   right: 0;
@@ -57,7 +57,7 @@ ul li.checked::before {
   padding: 12px 16px 12px 16px;
 }
 
-.kapat:hover {
+.close:hover {
   background-color: #f78501;
   color: white;
 
